# context-engine

./: .env.example  .gitignore  README.md  pyproject.toml
configs/: experiment_v1_baseline.json
data/: README.md
data/annotation/: distractor_guidelines.md  query_authoring_guidelines.md
data/processed/: candidate_pools_v1.jsonl  context_sets_v1.jsonl  corpus_chunks_v1.jsonl  outcomes_model_openai_v1.jsonl  outcomes_model_stub_v1.jsonl  outcomes_v1.jsonl  queries_v1.jsonl
docs/: component-interface-spec.md  contribution-guide.md  data-contract.md  experiment-config-format.md  run-model-backed-runner.md
scripts/: analyze_results.py  generate_context_sets.py  generate_model_outcomes.py  generate_outcomes.py
src/context_engine/: __init__.py  analysis.py  artifacts.py  authoring.py  cli.py  config.py  context_sets.py  dataset.py  env.py  evaluation.py  io.py  model_outcomes.py  prompting.py  runner.py  validation.py
tests/: test_analysis.py  test_artifacts.py  test_authoring.py  test_config.py  test_context_sets.py  test_dataset.py  test_env.py  test_evaluation.py  test_generate_context_sets.py  test_generate_model_outcomes.py  test_prompting.py  test_runner.py  test_validation.py
