[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "context-engine"
version = "0.1.0"
description = "Utility-aware context selection benchmark and experimental stack."
readme = "README.md"
requires-python = ">=3.11"
authors = [
  { name = "Utkarsh" }
]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
